# pets_medication_tracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  database.py  main.py
app/api/: dependencies.py
app/api/v1/: auth.py  calendar.py  doses.py  drugs.py  medications.py  pets.py
app/core/: cache.py  exceptions.py  mailer.py  security.py
app/models/: __init__.py  dose.py  drug.py  medication.py  pet.py  user.py
app/repositories/: dose_repo.py  drug_repo.py  medication_repo.py  pet_repo.py  user_repo.py
app/schemas/: __init__.py  auth.py  calendar.py  drug.py  medication.py  pet.py
app/services/: auth_service.py  calendar_service.py  drug_service.py  medication_service.py  pet_service.py  scheduler_service.py
app/static/: index.html
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_avatar_path.py  003_add_cancelled_dose_status.py  004_add_reminder_times.py  005_add_medication_soft_delete.py  006_add_password_reset_fields.py  007_add_drugs_catalog.py
tests/: conftest.py  test_auth.py  test_calendar.py  test_calendar_month.py  test_doses.py  test_drugs.py  test_medications.py  test_pets.py
tests/unit/: test_auth_service.py  test_calendar_service.py  test_drug_service.py  test_medication_service.py  test_pet_service.py  test_schemas.py  test_security.py
